# huestacean

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CNAME  LICENSE  NOTICE  README.md  bridgediscovery.cpp  bridgediscovery.h  build.cmd  hue.cpp  hue.h  huebridge.cpp  huebridge.h  huerunner.cpp  huerunner.h  huestacean.cpp  huestacean.h  huestacean.pro  main.cpp  objectmodel.cpp  objectmodel.h  qml.qrc  qtquickcontrols2.conf  updatesubmodules.dns.cmd  utility.cpp  utility.h
android/: AndroidManifest.xml  gradle.properties  local.properties
docs/: CNAME  index.md
huestacean-cli/: README.md
huestacean-gui/: CMakeLists.txt
huestacean-gui/qml/: About.qml  BridgesTab.qml  main.qml
huestacean-gui/src/: main.cpp  objectmodel.cpp
huestaceand/android/src/com/huestacean/: Huestacean.java
huestaceand/include/: huebridge.h  huestacean.h
huestaceand/include/mac/: screencapture.h
huestaceand/src/: entertainment.cpp
include/: backend.h  bridgediscovery.h  effect.h  entertainment.h  huebridge.h  huestacean.h  lightupdate.h  room.h  transform.h  utility.h
include/backend/: backend.h  deviceprovider.h
include/common/: changelistenernotifier.h  color.h  device.h  effect.h  ichangelistenernotifier.h  lightupdate.h  math.h  providertype.h  room.h  scene.h  transform.h  uniqueid.h  utility.h
include/effects/: effects.h
include/frontend/: frontend.h  frontendtypes.h  rep_frontend.h  rep_frontend.rep  utility.h
include/frontend/gui/: gui.h
include/hue/: bridge.h  bridgediscovery.h  hue.h  streamer.h
include/razer/: chroma.h  razer.h  razerdevices.h
libhuestacean/include/: utility.h
libhuestacean/src/: utility.cpp
qml/: About.qml  Bridges.qml  BridgesTab.qml  Screensync.qml  about.qml  bridges.qml  home.qml  main.qml  screensync.qml
resources/: RCa02168  RCb02168  qml.qrc  qtquickcontrols2.conf  resource.h
resources/qml/: Common.qml  MaterialDesign.js  PaletteCategory.qml  PaletteItem.qml  SceneEditor.qml  SceneItem.qml  SceneList.qml  SceneListScreen.qml  frontend.qml  main.qml  qmldir
src/: bridgediscovery.cpp  entertainment.cpp  huebridge.cpp  huestacean.cpp  main.cpp  utility.cpp
src/backend/: backend.cpp
src/common/: device.cpp  effect.cpp  math.cpp  room.cpp  scene.cpp  utility.cpp
src/effects/: effects.cpp
src/frontend/: frontend.cpp  frontendtypes.cpp
src/frontend/gui/: gui.cpp
src/hue/: bridge.cpp  bridgediscovery.cpp  hue.cpp  streamer.cpp
src/mac/: screencapture.mm
src/razer/: chroma.cpp  razer.cpp  razerdevices.cpp
tests/: api.cpp  backend.cpp  backendtests.cpp  huetests.cpp  math.cpp  mathtests.cpp  razertests.cpp  test.cpp  testsmain.cpp
